# airo_simple_traj

./: CMakeLists.txt  README.md  package.xml  setup.py
launch/: aae_traj.launch
scripts/: aae.py  point.py  start.py  trial.py
scripts/traj_utils/: mainserver.py
src/: traj.cpp
src/include/: opt_traj_gen.hpp
